data/derived/comb/progs/unify/prog8388.ml.out
Characters 102-110:
  if (j+k>10) then (1, x::(j+k-10)) else (0, x::(j+k)) in 
                          ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         (int * int) list
